fix touch events and remove overflow-x

--- a/WebApp/static/main_style.css
+++ b/WebApp/static/main_style.css
@@ -357,8 +357,6 @@ body {
   flex-wrap: nowrap;
   gap: 24px;
   flex-direction: column;
-  overflow-x: scroll;
-
   width: 80%;
   margin: 50px auto;
 }
